css/jspsych.css
/*
 * CSS for jsPsych experiments.
 *
 * This stylesheet provides minimal styling to make jsPsych
 * experiments look polished without any additional styles.
 */

 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700);

/* Container holding jsPsych content */

 .jspsych-display-element {
   display: flex;
   flex-direction: column;
   overflow-y: auto;
 }

 .jspsych-display-element:focus {
   outline: none;
 }

 .jspsych-content-wrapper {
   display: flex;
   margin: auto;
   flex: 1 1 100%;
   width: 100%;
 }

 .jspsych-content {
   max-width: 95%; /* this is mainly an IE 10-11 fix */
   text-align: center;
   margin: auto; /* this is for overflowing content */
 }

 .jspsych-top {
   align-items: flex-start;
 }

 .jspsych-middle {
   align-items: center;
 }

/* fonts and type */

.jspsych-display-element {
  font-family: 'Open Sans', 'Arial', sans-serif;
  font-size: 18px;
  line-height: 1.6em;
}

/* Form elements like input fields and buttons */

.jspsych-display-element input[type="text"] {
  font-family: 'Open Sans', 'Arial', sans-serif;
  font-size: 14px;
}

/* borrowing Bootstrap style for btn elements, but combining styles a bit */
.jspsych-btn {
  display: inline-block;
  padding: 6px 12px;
  margin: 0px;
  font-size: 14px;
  font-weight: 400;
  font-family: 'Open Sans', 'Arial', sans-serif;
  cursor: pointer; 
  line-height: 1.4;
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
  background-image: none;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #333;
  background-color: #fff;
  border-color: #ccc;
}

.jspsych-btn:hover {
  background-color: #ddd;
  border-color: #aaa;
}

.jspsych-btn:disabled {
  background-color: #eee;
  color: #aaa;
  border-color: #ccc;
 /* cursor: not-allowed; */
}

/* jsPsych progress bar */

#jspsych-progressbar-container {
  color: #555;
  border-bottom: 1px solid #dedede;
  background-color: #f9f9f9;
  margin-bottom: 1em;
  text-align: center;
  padding: 8px 0px;
  width: 100%;
  line-height: 1em;
}
#jspsych-progressbar-container span {
  font-size: 14px;
  padding-right: 14px;
}
#jspsych-progressbar-outer {
  background-color: #eee;
  width: 50%;
  margin: auto;
  height: 14px;
  display: inline-block;
  vertical-align: middle;
  box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
}
#jspsych-progressbar-inner {
  background-color: #aaa;
  width: 0%;
  height: 100%;
}

/* Control appearance of jsPsych.data.displayData() */
#jspsych-data-display {
  text-align: left;
}

.a-label {
  position: absolute;
  top: 25%;
  left: 50%;
  width: 700px;
  height: 100px;
  margin: -50px 0 0 -350px;
  font-weight: bold;
  font-size: 40px;
  color: #00aa00;
}

.a-span {
  font-weight: bold;
  color: #00aa00;
}

.a-reward {
  display: inline-block;
  top: 10px;
  width: 500px; 
  height: 80px; 
  line-height: 80px;
  font-weight: bold;
  font-size: 40px;
  color: #00aa00;
}

.b-label {
  position: absolute;
  top: 25%;
  left: 50%;
  width: 700px;
  height: 100px;
  margin: -50px 0 0 -350px;
  font-weight: bold;
  font-size: 40px;
  color: #1067e8;
}

.b-span {
  font-weight: bold;
  color: #1067e8;
}

.b-reward {
  display: inline-block;
  top: 10px;
  width: 500px; 
  height: 80px; 
  line-height: 80px;
  font-weight: bold;
  font-size: 40px;
  color: #1067e8;
}

.choices-outer {
  position: absolute;
  top: 50%;
  left: 50%;
  width: 700px;
  height: 100px;
  margin: -50px 0 0 -350px;

}

.choices-inner {
  position: absolute; 
  top: 10px;
  width: 80px; 
  height: 80px; 
  line-height: 80px;
  background-color: #c0c0c0;
  font-size:20px;
}

.a-select {
  position: absolute; 
  top: 10px;
  width: 80px; 
  height: 80px; 
  line-height: 80px;
  background-color: #00aa00;
  font-size:20px;
}

.b-select {
  position: absolute; 
  top: 10px;
  width: 80px; 
  height: 80px; 
  line-height: 80px;
  background-color: #339EFF;
  font-size:20px;
}

.rewardimg {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 40%;
}

.parent {
  position: relative;
  width: 950px;
 height: 390px; 
 /* height: auto; */
}

.special {
  position: relative;
  width: 950px;
 height: 200px; 
 /* height: auto; */
}

.specialOnly {
  position: relative;
  width: 950px;
 height: 500px; 
 /* height: auto; */
}

.box{
  position: absolute;
  top: 50%;
  left: 50%;
  width: 200px;
  height: 200px;
  margin: -100px 0 0 -100px;
}

.green-span {
  font-weight: bold;
  color: #00aa00;
}

.gray-span {
  font-weight: bold;
  color: #444444;
}

.red-span {
  font-weight: bold;
  color: #cf0000;
}

/*
#outer-shape, #inner-shape {
    position: absolute;
    border: 5px solid black;
    background-color: white;
} */

/* Circle styles */
.circle {
    border-radius: 50%; /* Fully rounded */
}

/* Square styles */
.square {
    border-radius: 0; /* No rounding */
}

/* Sizes for outer and inner shapes */
#outer-shape {
    width: 150px;
    height: 150px;
    position: relative; /* So inner shape is positioned relative to this */
    border: 5px solid black;
    background-color: white;
    display: flex;
    align-items: center;
    justify-content: center;
}

#inner-shape {
    width: 100px;
    height: 100px;
    background-color: white;
    border: 5px solid black;
    position: absolute; /* Positioned inside the outer shape */
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%); /* Centers the inner shape inside the outer shape */
}


#shape-wrapper {
    display: flex;
    justify-content: center; /* Centers both games */
    gap: 50px; /* Spacing between shapes */
    width: 100%;
    margin-bottom: 0px
}

.game-container {
    display: flex;
    flex-direction: column; /* Forces stacking of title & shape */
    align-items: center;
    text-align: center;
}

.outer-container {
    display: flex;
    align-items: center;
    justify-content: center;
}

/* Style for the Game Titles */
.game-title {
    font-size: 18px;
    font-weight: bold;
    margin-bottom: 10px; /* Space between title and shapes */
    text-align: center;
}

.table-container {
    margin-bottom: 3px; /* Adjust as needed */
    font-size: 26px; /* Adjust as needed */
}

